Amend z-index for Game Intro to prevent the wind-turbine from being visible until the game has started

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,14 +15,14 @@ body {
   font-size: 1rem;
   font-weight: 300;
   letter-spacing: 0.2rem;
-  --cursor: none;
+  cursor: none;
 }
 /* Game intro page styles */
 .modal {
   cursor: default;
   position: absolute;
   top: 0;
-  z-index: 1000;
+  z-index: 10000;
   width: 100%;
   height: 100%;
   display: flex;
@@ -140,10 +140,8 @@ header {
 .wind-turbine {
     position: absolute;
     z-index: 1000;
-    height: 10rem;
-    top: 0;
-    left: 0;
-    transform: translate(10px, -40px);
+    height: 8rem;
+    transform: translate(1rem, -4rem);
     pointer-events: none;
 }
 /* 404 Error page style */
